--- a/escola-qualidade-vida/frontend/public/css/styles.css
+++ b/escola-qualidade-vida/frontend/public/css/styles.css
@@ -189,3 +189,23 @@ footer {
         font-size: 1rem;
     }
 }
+.logout-btn {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: #c40000;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s;
+}
+
+.logout-btn:hover {
+    background-color: #a30000;
+    transform: scale(1.1);
+}
