--- a/escola-qualidade-vida/frontend/public/css/styles.css
+++ b/escola-qualidade-vida/frontend/public/css/styles.css
@@ -157,16 +157,16 @@ footer {
     position: fixed;
     top: 20px;
     right: 20px;
-    background-color: #ff0000;
-    color: #fff;
-    font-size: 1.2rem;
+    background: linear-gradient(145deg, #902c2c, #ff0000);
+    color: white;
     border: none;
-    border-radius: 50%; /* Tornando o botão redondo */
-    padding: 15px 20px;
+    border-radius: 10px; /* <-- Quadrado */
+    width: 70px;
+    height: 70px;
+    font-size: 1.2rem;
     cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease-in-out;
-    z-index: 10; /* Garante que o botão fique acima de outros elementos */
+    box-shadow: 0 8px 30px rgba(196, 0, 0, 0.3);
+    transition: all 0.3s;
 }
 
 .logout-btn:hover {
@@ -188,24 +188,4 @@ footer {
         padding: 12px 18px;
         font-size: 1rem;
     }
-}
-.logout-btn {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background-color: #c40000;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s;
-}
-
-.logout-btn:hover {
-    background-color: #a30000;
-    transform: scale(1.1);
 }
