--- a/escola-qualidade-vida/frontend/public/css/cadastroAluno.css
+++ b/escola-qualidade-vida/frontend/public/css/cadastroAluno.css
@@ -147,3 +147,9 @@ footer {
     background-color: #d1d1d1;
     margin-top: 15%;
   }
+
+  textarea {
+  resize: none;   
+  width: 100%;    
+  height: 120px;  
+}
