--- a/escola-qualidade-vida/frontend/public/css/ocorrencias.css
+++ b/escola-qualidade-vida/frontend/public/css/ocorrencias.css
@@ -215,3 +215,11 @@ footer {
     background-color: #d1d1d1;
     margin-top: 15%;
   }
+
+
+  
+  textarea {
+  resize: none;   
+  width: 100%;    
+  height: 120px;  
+}
